tests/snapshots/snapshot_fixtures__stdlib__stdlib__strtoul.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdlib/strtoul.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[5] = "%lu\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[6] = "12345" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn strtoul(%arg0: s8i*, %arg1: s8i**, %arg2: s32i) -> u64i [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[5]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = get_global @strtoul : ((s8i*, s8i**, s32i) -> u64i)*
    %6 = get_global @.str.1 : s8i[6]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    %8 = const #cir.ptr<null> : s8i**
    %9 = const 10 : s32i
    %10 = call @strtoul(%7, %8, %9) : u64i [all]
    %11 = call @printf(%4, %10) : s32i [all]
    %12 = const 0 : s32i
    store %12, %0
    %13 = load %0 : s32i
    return %13
}
